...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="glX-DR-NsP">
                                <rect key="frame" x="134" y="488" width="500" height="30"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="userLoginButtonPressed:" destination="52V-8z-kuT" eventType="touchUpInside" id="qSQ-c4-zWj"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Dr. Lageman's App Study for Parkinson's Disease Research" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConst
                                <rect key="frame" x="20" y="28" width="728" height="250"/>
                                <constraints>
...
                                            </subviews>
                                        </stackView>
                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Appointments" translatesAutoresizingMaskIntoConstraints="NO" id="hjk-lT-0vQ">
                                            <rect key="frame" x="8" y="56" width="40" height="40"/>
                                            <constraints>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Appointments" id="TLA-zZ-QMW">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="FCi-xu-NbI">
                            <connections>
                                <action selector="addPopover:" destination="Y2i-rY-BPz" id="5t3-gP-t2B"/>
...
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pE4-u0-XsR">
                                                    <rect key="frame" x="18" y="12" width="732" height="30"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <textInputTraits key="textInputTraits"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Type of Appointment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XCp-kV-wLF">
                                                    <rect key="frame" x="48" y="17" width="170" height="21.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <state key="normal" title="Enter"/>
                                                    <variation key="default">
                                                        <mask key="constraints">
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Start Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="549" id="9US-E2-r2q">
                                                    <rect key="frame" x="48" y="17" width="84.5" height="21.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="End Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0yE-mK-ivT">
                                                    <rect key="frame" x="48" y="17" width="76" height="21.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Journal" image="Journals" id="Dbj-on-x2N"/>
                    <navigationItem key="navigationItem" title="Add Journal" id="0mU-eH-piQ">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="ILd-RF-B0S">
...
        <scene sceneID="mtx-fx-89k">
            <objects>
                <viewController title="Tasks" id="wie-rr-RA5" customClass="TaskTableViewController" customModule="CreativeCalendar" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="22" sectionFooterHeight="22" id="ttb-2Z-vAq">
                        <rect key="frame" x="0.0" y="64" width="768" height="911"/>
...
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="Additional Information (optional)" id="uGS-NH-2Ep" userLabel="Additional Info">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" rowHeight="54" id="GEW-WR-RXW">
...
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Pq-lC-eMB">
                                                            <rect key="frame" x="0.0" y="27" width="286" height="16"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </subviews>
