...
    }
    
    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        let tableSection = Tasks.taskDictionary[Tasks.taskSections[(indexPath as NSIndexPath).section]]
        var taskForAction = tableSection![(indexPath as NSIndexPath).row] as TaskItem
        let taskCellForAction = tableView.cellForRow(at: indexPath) as! TaskCell
        let exitMenu = UIAlertAction(title: "Exit Menu", style: .cancel, handler: nil)
        
        // Make custom actions for delete, cancel and complete.
        let deletedAction = UITableViewRowAction(style: .default, title: "Delete", handler: {(action:UITableViewRowAction!, indexPath: IndexPath!) -> Void in
            
            let deleteOptions = UIAlertController(title: "Delete Task", message: "Are you sure you want to delete the task: \(taskForAction.taskTitle)?", preferredStyle: .alert)
            deleteOptions.addTextField(configurationHandler: {(textField) in
                textField.placeholder = "Reason for Delete"
                textField.addTarget(self, action: #selector(self.textChanged(_:)), for: .editingChanged)
            })
            
            let deleteTask = UIAlertAction(title: "Delete Task", style: .destructive, handler: {(action: UIAlertAction) -> Void in
                
                let deleteAllTasksController = UIAlertController(title: "Delete", message: "Would you like to delete all tasks of this type with this title", preferredStyle: .alert)
...
            deleteOptions.addAction(deleteTask)
            deleteOptions.addAction(exitMenu)
            self.present(deleteOptions, animated: true, completion: nil)
        })
        
        
        let canceledAction = UITableViewRowAction(style: .default, title: "Cancel", handler: {(action:UITableViewRowAction!, indexPath: IndexPath!) -> Void in
            let cancelOptions = UIAlertController(title: "Cancel Task", message: "Would you like to cancel the task: \(taskForAction.taskTitle)", preferredStyle: .alert)
            cancelOptions.addTextField(configurationHandler: {(textField) in
                textField.placeholder = "Reason for Cancel"
                textField.addTarget(self, action: #selector(self.textChanged(_:)), for: .editingChanged)
            })

            let cancelAction = UIAlertAction(title: "Cancel Task", style: .destructive, handler: {(action: UIAlertAction) -> Void in
                
                // Cancel Appointment
...
            cancelOptions.addAction(cancelAction)
            cancelOptions.addAction(exitMenu)
            self.present(cancelOptions, animated: true, completion: nil)
        })
        
        
        let completedAction = UITableViewRowAction(style: .default, title: "Complete", handler: {(action:UITableViewRowAction!, indexPath: IndexPath!) -> Void in
            
            let completeOptions = UIAlertController(title: "Complete Task", message: "Have you completed task: \(taskForAction.taskTitle)", preferredStyle: .alert)
            
            // Appointment was completed.
            let completeAction = UIAlertAction(title: "Complete Task", style: .destructive, handler: {(action: UIAlertAction) -> Void in
                
                // Complete the appointment and update its image.
                taskForAction.completed = true
...
