...
            alertTaskRightDetail.text = selectedAlert
        }
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        taskNameTextField.placeholder = "Task Name"
        taskAdditionalInfoTextBox.placeholder = "Additional Information"
        taskFinishDateLabel.text = "Estimated Task Completion Date"
        taskFinishDateRightDetail.text = taskFormatter
                            .string(from: currentDate)
        repeatingTaskTitle.text = "Schedule a repeating Task"
        alertTaskTitle.text     = "Schedule an alert"
        alertTaskRightDetail.text = AlertTableViewController()
                                                .alertArray[0]
...
            
            
            _ = self.navigationController?.popToRootViewController(animated: true)
        }
        else{
            // This is similar to the code for the static appointment alert.
            let someFieldMissing = UIAlertController(title: "Missing Task Title or Date", message: "One or more of the reqired fields marked with an asterisk has not been filled in", preferredStyle: .alert)
            
            someFieldMissing.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: nil))
            
            self.present(someFieldMissing, animated: true, completion: nil)
        }
    }
...
